--- a/blog.css
+++ b/blog.css
@@ -167,7 +167,7 @@ h1 {
 h2{
     text-align: center;
     padding: 3% 0;
-    font-size: 5rem;
+    font-size: 4rem;
     color: var(--greyish);
 }
 
